refacto du code entier fait maintenant on va verifier que tout fonctionne